generator client {
  provider        = "prisma-client-js"
  previewFeatures = ["multiSchema"]
}

generator dbml {
  provider = "prisma-dbml-generator"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
  schemas  = ["app", "audit", "clinical", "laboratory", "phi"]
}

model audit_log {
  id         BigInt    @id @default(autoincrement())
  table_name String
  action     String
  old_data   Json?
  new_data   Json?
  changed_by String
  changed_at DateTime? @default(now()) @db.Timestamptz(6)

  @@schema("audit")
}

model bone_marrow {
  id                               BigInt    @id @default(autoincrement())
  patient_mrn                      String    @db.VarChar(50)
  hsp_account_id                   String    @db.VarChar(50)
  order_id                         String?   @db.VarChar(50)
  result_time                      DateTime  @db.Timestamptz(6)
  lab_code                         String?   @db.VarChar(50)
  lab_name                         String?   @db.VarChar(200)
  component_id                     String?   @db.VarChar(50)
  lab_component_description        String?
  bone_marrow_results_by_component String?
  created_at                       DateTime? @default(now()) @db.Timestamptz(6)
  updated_at                       DateTime? @default(now()) @db.Timestamptz(6)
  patients                         patients  @relation(fields: [patient_mrn], references: [patient_mrn], onDelete: NoAction, onUpdate: NoAction)

  @@index([result_time], map: "idx_bone_marrow_date")
  @@index([hsp_account_id], map: "idx_bone_marrow_hsp_account")
  @@index([patient_mrn], map: "idx_bone_marrow_mrn")
  @@index([order_id], map: "idx_bone_marrow_order")
  @@schema("clinical")
}

/// This table contains check constraints and requires additional setup for migrations. Visit https://pris.ly/d/check-constraints for more info.
model demographics {
  id                 Int       @id @default(autoincrement())
  patient_mrn        String?   @db.VarChar(50)
  birth_date         DateTime? @db.Timestamptz(6)
  age                Int?
  gender             String?   @db.VarChar(20)
  race               String?   @db.VarChar(50)
  ethnicity          String?   @db.VarChar(50)
  is_tobacco_user_yn String?   @db.VarChar(10)
  alcohol_user_yn    String?   @db.VarChar(10)
  ill_drug_user_yn   String?   @db.VarChar(10)
  source             String?   @db.VarChar(50)
  created_at         DateTime? @default(now()) @db.Timestamptz(6)
  updated_at         DateTime? @default(now()) @db.Timestamptz(6)
  patients           patients? @relation(fields: [patient_mrn], references: [patient_mrn], onDelete: NoAction, onUpdate: NoAction)

  @@index([birth_date], map: "idx_demographics_birth_date")
  @@index([patient_mrn], map: "idx_demographics_mrn")
  @@schema("clinical")
}

/// This table contains check constraints and requires additional setup for migrations. Visit https://pris.ly/d/check-constraints for more info.
model ip_admissions {
  id                     BigInt    @id @default(autoincrement())
  patient_mrn            String    @db.VarChar(50)
  hsp_account_id         String    @db.VarChar(50)
  adm_date_time          DateTime  @db.Timestamptz(6)
  disch_date_time        DateTime? @db.Timestamptz(6)
  discharge_department   String?   @db.VarChar(200)
  discharge_disposition  String?   @db.VarChar(200)
  icu_admission_yn       String?   @db.VarChar(10)
  admit_dx_cd_1          String?   @db.VarChar(50)
  admit_dx_description_1 String?
  admit_dx_cd_2          String?   @db.VarChar(50)
  admit_dx_description_2 String?
  final_dx_cd_1          String?   @db.VarChar(50)
  final_dx_description_1 String?
  final_dx_cd_2          String?   @db.VarChar(50)
  final_dx_description_2 String?
  final_dx_cd_3          String?   @db.VarChar(50)
  final_dx_description_3 String?
  final_dx_cd_4          String?   @db.VarChar(50)
  final_dx_description_4 String?
  final_dx_cd_5          String?   @db.VarChar(50)
  final_dx_description_5 String?
  created_at             DateTime? @default(now()) @db.Timestamptz(6)
  updated_at             DateTime? @default(now()) @db.Timestamptz(6)
  has_date_issues        Boolean?  @default(false)
  date_issue_notes       String?
  patients               patients  @relation(fields: [patient_mrn], references: [patient_mrn], onDelete: NoAction, onUpdate: NoAction)

  @@index([adm_date_time, disch_date_time], map: "idx_ip_admissions_dates")
  @@index([hsp_account_id], map: "idx_ip_admissions_hsp_account")
  @@index([patient_mrn], map: "idx_ip_admissions_mrn")
  @@schema("clinical")
}

model ip_medications {
  id               BigInt    @id @default(autoincrement())
  patient_mrn      String    @db.VarChar(50)
  hsp_account_id   String    @db.VarChar(50)
  adm_date_time    DateTime  @db.Timestamptz(6)
  disch_date_time  DateTime? @db.Timestamptz(6)
  medication       String    @db.VarChar(200)
  dosage           String?   @db.VarChar(100)
  unit             String?   @db.VarChar(50)
  frequency        String?   @db.VarChar(100)
  taken_time       DateTime? @db.Timestamptz(6)
  rx_class_name    String?   @db.VarChar(100)
  created_at       DateTime? @default(now()) @db.Timestamptz(6)
  updated_at       DateTime? @default(now()) @db.Timestamptz(6)
  has_date_issues  Boolean?  @default(false)
  date_issue_notes String?
  patients         patients  @relation(fields: [patient_mrn], references: [patient_mrn], onDelete: NoAction, onUpdate: NoAction)

  @@index([adm_date_time, disch_date_time, taken_time], map: "idx_ip_medications_dates")
  @@index([hsp_account_id], map: "idx_ip_medications_hsp_account")
  @@index([patient_mrn], map: "idx_ip_medications_mrn")
  @@schema("clinical")
}

model op_medications {
  id                  BigInt    @id @default(autoincrement())
  patient_mrn         String    @db.VarChar(50)
  hsp_account_id      String    @db.VarChar(50)
  visit_date          DateTime  @db.Timestamptz(6)
  order_med_id        String?   @db.VarChar(50)
  order_dttm          DateTime? @db.Timestamptz(6)
  rx_status           String?   @db.VarChar(50)
  generic_description String?
  created_at          DateTime? @default(now()) @db.Timestamptz(6)
  updated_at          DateTime? @default(now()) @db.Timestamptz(6)
  patients            patients  @relation(fields: [patient_mrn], references: [patient_mrn], onDelete: NoAction, onUpdate: NoAction)

  @@index([visit_date, order_dttm], map: "idx_op_medications_dates")
  @@index([hsp_account_id], map: "idx_op_medications_hsp_account")
  @@index([patient_mrn], map: "idx_op_medications_mrn")
  @@index([order_med_id], map: "idx_op_medications_order")
  @@schema("clinical")
}

/// This table contains check constraints and requires additional setup for migrations. Visit https://pris.ly/d/check-constraints for more info.
model op_visits {
  id                 BigInt    @id @default(autoincrement())
  patient_mrn        String    @db.VarChar(50)
  pat_id             String?   @db.VarChar(50)
  hsp_account_id     String    @db.VarChar(50)
  visit_date         DateTime  @db.Timestamptz(6)
  visit_type         String?   @db.VarChar(100)
  department_id      String?   @db.VarChar(50)
  department_name    String?   @db.VarChar(200)
  bp_systolic        Int?
  bp_diastolic       Int?
  weight_lbs         Decimal?  @db.Decimal
  weight_kg          Decimal?  @db.Decimal
  current_icd10_list String?
  dx_name            String?
  created_at         DateTime? @default(now()) @db.Timestamptz(6)
  updated_at         DateTime? @default(now()) @db.Timestamptz(6)
  patients           patients  @relation(fields: [patient_mrn], references: [patient_mrn], onDelete: NoAction, onUpdate: NoAction)

  @@index([visit_date], map: "idx_op_visits_date")
  @@index([hsp_account_id], map: "idx_op_visits_hsp_account")
  @@index([patient_mrn], map: "idx_op_visits_mrn")
  @@index([pat_id], map: "idx_op_visits_pat_id")
  @@schema("clinical")
}

/// The underlying table does not contain a valid unique identifier and can therefore currently not be handled by Prisma Client.
model omics_results {
  id                            String         @id @default(uuid())
  project                       String?        @db.VarChar(20)
  subject_id                    String         @db.VarChar(20)
  sample_number                 Int
  sample_id                     String         @unique @db.VarChar(50)
  date_of_collection            DateTime?      @db.Date
  age_at_collection             Decimal?       @db.Decimal
  genotype                      String?        @db.VarChar(50)
  sex                           String?        @db.VarChar(20)
  therapies                     String?
  days_to_processing            Int?
  steady_state                  String?        @db.VarChar(50)
  transfusion_status            String?        @db.VarChar(50)
  transfusion_confirmed         String?        @db.VarChar(50)
  date_advia                    DateTime?      @db.Date
  rbc_advia                     Decimal?       @db.Decimal
  hb_advia                      Decimal?       @db.Decimal
  hct_advia                     Decimal?       @db.Decimal
  mcv_advia                     Decimal?       @db.Decimal
  mch_advia                     Decimal?       @db.Decimal
  mchc_advia                    Decimal?       @db.Decimal
  rdw_advia                     Decimal?       @db.Decimal
  hdw_advia                     Decimal?       @db.Decimal
  plt_advia                     Decimal?       @db.Decimal
  mpv_advia                     Decimal?       @db.Decimal
  wbc_advia                     Decimal?       @db.Decimal
  neut_advia                    Decimal?       @db.Decimal
  retic_advia                   Decimal?       @db.Decimal
  chr_advia                     Decimal?       @db.Decimal
  hc41_v120_advia               Decimal?       @db.Decimal
  hc41_v60_120_advia            Decimal?       @db.Decimal
  hc41_v60_advia                Decimal?       @db.Decimal
  drbc_advia                    Decimal?       @db.Decimal
  hyper_advia                   Decimal?       @db.Decimal
  nrbc_advia                    Decimal?       @db.Decimal
  qc_pass_advia                 String?        @db.VarChar(50)
  qc_notes_advia                String?
  date_lorrca                   DateTime?      @db.Date
  ei_min_lorrca                 Decimal?       @db.Decimal
  ei_max_lorrca                 Decimal?       @db.Decimal
  ei_delta_lorrca               Decimal?       @db.Decimal
  pos_lorrca                    Decimal?       @db.Decimal
  instrument_lorrca             String?        @db.VarChar(100)
  qc_pass_lorrca                String?        @db.VarChar(50)
  qc_notes_lorrca               String?
  date_visc                     DateTime?      @db.Date
  visc_45                       Decimal?       @db.Decimal
  visc_225                      Decimal?       @db.Decimal
  qc_pass_viscosity             String?        @db.VarChar(50)
  qc_notes_viscosity            String?
  date_hvr                      DateTime?      @db.Date
  hvr_45                        Decimal?       @db.Decimal
  hvr_225                       Decimal?       @db.Decimal
  qc_pass_hvr                   String?        @db.VarChar(50)
  qc_notes_hvr                  String?
  date_dna                      DateTime?      @db.Date
  concentration_1_dna           Decimal?       @db.Decimal
  purity_1_dna                  Decimal?       @db.Decimal
  concentration_2_dna           Decimal?       @db.Decimal
  purity_2_dna                  Decimal?       @db.Decimal
  qc_pass_dna                   String?        @db.VarChar(50)
  qc_notes_dna                  String?
  date_plasma                   DateTime?      @db.Date
  vol_plasma_1                  Decimal?       @db.Decimal
  vol_plasma_2                  Decimal?       @db.Decimal
  vol_plasma_3                  Decimal?       @db.Decimal
  qc_notes_plasma               String?
  date_pmbc                     DateTime?      @db.Date
  cell_number_1_pbmc            Decimal?       @db.Decimal
  cell_number_2_pbmc            Decimal?       @db.Decimal
  sent_to_gt_pbmc               String?        @db.VarChar(50)
  qc_notes_pbmc                 String?
  date_f_cells                  DateTime?      @db.Date
  percent_f_cells               Decimal?       @db.Decimal
  stain_f_cells                 String?        @db.VarChar(100)
  cytometer_f_cells             String?        @db.VarChar(100)
  qc_pass_f_cells               String?        @db.VarChar(50)
  qc_notes_f_cells              String?
  date_adhesion                 DateTime?      @db.Date
  cells_adhered_adhesion        Decimal?       @db.Decimal
  qc_pass_adhesion              String?        @db.VarChar(50)
  qc_notes_adhesion             String?
  date_hplc                     DateTime?      @db.Date
  hbf_percent_grady_hplc        Decimal?       @db.Decimal
  hba_percent_grady_hplc        Decimal?       @db.Decimal
  hbc_percent_grady_hplc        Decimal?       @db.Decimal
  hba2_percent_grady_hplc       Decimal?       @db.Decimal
  hbs_percent_grady_hplc        Decimal?       @db.Decimal
  hbf_percent_d10_hplc          Decimal?       @db.Decimal
  hba_percent_d10_hplc          Decimal?       @db.Decimal
  hbc_percent_d10_hplc          Decimal?       @db.Decimal
  hba2_percent_d10_hplc         Decimal?       @db.Decimal
  hbs_percent_d10_hplc          Decimal?       @db.Decimal
  hbf_percent_d10_fcell_ratio   Decimal?       @db.Decimal
  hbf_percent_grady_fcell_ratio Decimal?       @db.Decimal
  created_at                    DateTime?      @default(now()) @db.Timestamptz(6)
  updated_at                    DateTime?      @default(now()) @db.Timestamptz(6)
  omics_subjects                omics_subjects @relation(fields: [subject_id], references: [subject_id], onDelete: NoAction, onUpdate: NoAction)

  @@unique([subject_id, sample_number], name: "omics_results_subject_sample_key")
  @@index([date_of_collection], map: "idx_omics_results_collection_date")
  @@index([subject_id, sample_number], map: "idx_omics_results_sample_number")
  @@index([subject_id], map: "idx_omics_results_subject_id")
  @@schema("laboratory")
}

model omics_subjects {
  subject_id    String                @id @db.VarChar(20)
  patient_mrn   String                @db.VarChar(50)
  project       String                @default("OMI") @db.VarChar(20)
  created_at    DateTime?             @default(now()) @db.Timestamptz(6)
  updated_at    DateTime?             @default(now()) @db.Timestamptz(6)
  omics_results omics_results[]
  patients      patients              @relation(fields: [patient_mrn], references: [patient_mrn], onDelete: NoAction, onUpdate: NoAction)
  registrations subject_registration?

  @@unique([patient_mrn, project])
  @@index([patient_mrn], map: "idx_omics_subjects_mrn")
  @@schema("laboratory")
}

model patients {
  patient_mrn    String                 @id @db.VarChar(50)
  first_name     String?                @db.VarChar(100)
  last_name      String?                @db.VarChar(100)
  birth_date     DateTime?              @db.Date
  sex            String?                @db.VarChar(20)
  race           String?                @db.VarChar(100)
  ethnicity      String?                @db.VarChar(100)
  created_at     DateTime?              @default(now()) @db.Timestamptz(6)
  updated_at     DateTime?              @default(now()) @db.Timestamptz(6)
  middle_name    String?                @db.VarChar(100)
  labs           Labs[]
  bone_marrow    bone_marrow[]
  demographics   demographics[]
  ip_admissions  ip_admissions[]
  ip_medications ip_medications[]
  op_medications op_medications[]
  op_visits      op_visits[]
  unified_visits unified_visits[]
  omics_subjects omics_subjects[]
  registrations  subject_registration[]

  @@schema("phi")
}

model subject_registration {
  id                Int            @id @default(autoincrement())
  subject_id        String         @unique @db.VarChar(50)
  registration_date DateTime       @db.Date
  consent_date      DateTime       @db.Date
  corporate_id      String?        @db.VarChar(50)
  patient_mrn       String         @db.VarChar(50)
  first_name        String         @db.VarChar(100)
  middle_name       String?        @db.VarChar(100)
  last_name         String         @db.VarChar(100)
  date_of_birth     DateTime       @db.Date
  created_at        DateTime?      @default(now()) @db.Timestamptz(6)
  updated_at        DateTime?      @default(now()) @db.Timestamptz(6)
  patient           patients       @relation(fields: [patient_mrn], references: [patient_mrn], onDelete: NoAction, onUpdate: NoAction)
  omics_subject     omics_subjects @relation(fields: [subject_id], references: [subject_id], onDelete: NoAction, onUpdate: NoAction)

  @@index([patient_mrn], map: "idx_subject_registration_mrn")
  @@schema("phi")
}

model Labs {
  id                        Int       @id @default(autoincrement())
  patient_mrn               String    @db.VarChar(50)
  pat_enc_csn_id            String?   @db.VarChar(50)
  order_time                DateTime? @db.Timestamp(6)
  proc_code                 String?   @db.VarChar(50)
  proc_name                 String?   @db.VarChar(200)
  component_id              String?   @db.VarChar(50)
  lab_component_description String?   @db.VarChar(200)
  lab_result_value          String?
  result_time               DateTime? @db.Timestamp(6)
  created_at                DateTime  @default(now()) @db.Timestamp(6)
  updated_at                DateTime  @default(now()) @db.Timestamp(6)
  patient                   patients  @relation(fields: [patient_mrn], references: [patient_mrn])

  @@index([result_time])
  @@index([pat_enc_csn_id])
  @@index([patient_mrn])
  @@index([component_id])
  @@schema("clinical")
}

model unified_visits {
  id                    String    @id @default(uuid())
  patient_mrn           String    @db.VarChar(50)
  visit_id              String    @unique @db.VarChar(50)
  visit_type            String    @db.VarChar(2)
  source_id             String    @db.VarChar(50)
  start_date            DateTime  @db.Timestamptz(6)
  end_date              DateTime? @db.Timestamptz(6)
  department            String?   @db.VarChar(200)
  created_at            DateTime  @default(now()) @db.Timestamptz(6)
  updated_at            DateTime  @default(now()) @db.Timestamptz(6)
  icu_admission_yn      String?   @db.VarChar(10)
  discharge_disposition String?   @db.VarChar(200)
  admit_dx_cd           String?   @db.VarChar(50)
  admit_dx_description  String?
  final_dx_cd           String?   @db.VarChar(50)
  final_dx_description  String?
  specific_visit_type   String?   @db.VarChar(100)
  bp_systolic           Int?
  bp_diastolic          Int?
  weight_kg             Decimal?  @db.Decimal
  dx_codes              String?
  dx_names              String?
  heart_rate            Int?
  respiratory_rate      Int?
  temperature_f         Decimal?  @db.Decimal
  spo2                  Int?
  patient               patients  @relation(fields: [patient_mrn], references: [patient_mrn], onDelete: NoAction, onUpdate: NoAction)

  @@index([patient_mrn], map: "idx_unified_visits_mrn")
  @@index([start_date, end_date], map: "idx_unified_visits_dates")
  @@index([visit_id], map: "idx_unified_visits_visit_id")
  @@schema("clinical")
}
