//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table audit_log {
  id BigInt [pk, increment]
  table_name String [not null]
  action String [not null]
  old_data Json
  new_data Json
  changed_by String [not null]
  changed_at DateTime [default: `now()`]
}

Table bone_marrow {
  id BigInt [pk, increment]
  patient_mrn String [not null]
  hsp_account_id String [not null]
  order_id String
  result_time DateTime [not null]
  lab_code String
  lab_name String
  component_id String
  lab_component_description String
  bone_marrow_results_by_component String
  created_at DateTime [default: `now()`]
  updated_at DateTime [default: `now()`]
  patients patients [not null]
}

Table demographics {
  id Int [pk, increment]
  patient_mrn String
  birth_date DateTime
  age Int
  gender String
  race String
  ethnicity String
  is_tobacco_user_yn String
  alcohol_user_yn String
  ill_drug_user_yn String
  source String
  created_at DateTime [default: `now()`]
  updated_at DateTime [default: `now()`]
  patients patients

  Note: 'This table contains check constraints and requires additional setup for migrations. Visit https://pris.ly/d/check-constraints for more info.'
}

Table ip_admissions {
  id BigInt [pk, increment]
  patient_mrn String [not null]
  hsp_account_id String [not null]
  adm_date_time DateTime [not null]
  disch_date_time DateTime
  discharge_department String
  discharge_disposition String
  icu_admission_yn String
  admit_dx_cd_1 String
  admit_dx_description_1 String
  admit_dx_cd_2 String
  admit_dx_description_2 String
  final_dx_cd_1 String
  final_dx_description_1 String
  final_dx_cd_2 String
  final_dx_description_2 String
  final_dx_cd_3 String
  final_dx_description_3 String
  final_dx_cd_4 String
  final_dx_description_4 String
  final_dx_cd_5 String
  final_dx_description_5 String
  created_at DateTime [default: `now()`]
  updated_at DateTime [default: `now()`]
  has_date_issues Boolean [default: false]
  date_issue_notes String
  patients patients [not null]

  Note: 'This table contains check constraints and requires additional setup for migrations. Visit https://pris.ly/d/check-constraints for more info.'
}

Table ip_medications {
  id BigInt [pk, increment]
  patient_mrn String [not null]
  hsp_account_id String [not null]
  adm_date_time DateTime [not null]
  disch_date_time DateTime
  medication String [not null]
  dosage String
  unit String
  frequency String
  taken_time DateTime
  rx_class_name String
  created_at DateTime [default: `now()`]
  updated_at DateTime [default: `now()`]
  has_date_issues Boolean [default: false]
  date_issue_notes String
  patients patients [not null]
}

Table op_medications {
  id BigInt [pk, increment]
  patient_mrn String [not null]
  hsp_account_id String [not null]
  visit_date DateTime [not null]
  order_med_id String
  order_dttm DateTime
  rx_status String
  generic_description String
  created_at DateTime [default: `now()`]
  updated_at DateTime [default: `now()`]
  patients patients [not null]
}

Table op_visits {
  id BigInt [pk, increment]
  patient_mrn String [not null]
  pat_id String
  hsp_account_id String [not null]
  visit_date DateTime [not null]
  visit_type String
  department_id String
  department_name String
  bp_systolic Int
  bp_diastolic Int
  weight_lbs Decimal
  weight_kg Decimal
  current_icd10_list String
  dx_name String
  created_at DateTime [default: `now()`]
  updated_at DateTime [default: `now()`]
  patients patients [not null]

  Note: 'This table contains check constraints and requires additional setup for migrations. Visit https://pris.ly/d/check-constraints for more info.'
}

Table omics_results {
  id String [pk]
  project String
  subject_id String [not null]
  sample_number Int [not null]
  sample_id String [unique, not null]
  date_of_collection DateTime
  age_at_collection Decimal
  genotype String
  sex String
  therapies String
  days_to_processing Int
  steady_state String
  transfusion_status String
  transfusion_confirmed String
  date_advia DateTime
  rbc_advia Decimal
  hb_advia Decimal
  hct_advia Decimal
  mcv_advia Decimal
  mch_advia Decimal
  mchc_advia Decimal
  rdw_advia Decimal
  hdw_advia Decimal
  plt_advia Decimal
  mpv_advia Decimal
  wbc_advia Decimal
  neut_advia Decimal
  retic_advia Decimal
  chr_advia Decimal
  hc41_v120_advia Decimal
  hc41_v60_120_advia Decimal
  hc41_v60_advia Decimal
  drbc_advia Decimal
  hyper_advia Decimal
  nrbc_advia Decimal
  qc_pass_advia String
  qc_notes_advia String
  date_lorrca DateTime
  ei_min_lorrca Decimal
  ei_max_lorrca Decimal
  ei_delta_lorrca Decimal
  pos_lorrca Decimal
  instrument_lorrca String
  qc_pass_lorrca String
  qc_notes_lorrca String
  date_visc DateTime
  visc_45 Decimal
  visc_225 Decimal
  qc_pass_viscosity String
  qc_notes_viscosity String
  date_hvr DateTime
  hvr_45 Decimal
  hvr_225 Decimal
  qc_pass_hvr String
  qc_notes_hvr String
  date_dna DateTime
  concentration_1_dna Decimal
  purity_1_dna Decimal
  concentration_2_dna Decimal
  purity_2_dna Decimal
  qc_pass_dna String
  qc_notes_dna String
  date_plasma DateTime
  vol_plasma_1 Decimal
  vol_plasma_2 Decimal
  vol_plasma_3 Decimal
  qc_notes_plasma String
  date_pmbc DateTime
  cell_number_1_pbmc Decimal
  cell_number_2_pbmc Decimal
  sent_to_gt_pbmc String
  qc_notes_pbmc String
  date_f_cells DateTime
  percent_f_cells Decimal
  stain_f_cells String
  cytometer_f_cells String
  qc_pass_f_cells String
  qc_notes_f_cells String
  date_adhesion DateTime
  cells_adhered_adhesion Decimal
  qc_pass_adhesion String
  qc_notes_adhesion String
  date_hplc DateTime
  hbf_percent_grady_hplc Decimal
  hba_percent_grady_hplc Decimal
  hbc_percent_grady_hplc Decimal
  hba2_percent_grady_hplc Decimal
  hbs_percent_grady_hplc Decimal
  hbf_percent_d10_hplc Decimal
  hba_percent_d10_hplc Decimal
  hbc_percent_d10_hplc Decimal
  hba2_percent_d10_hplc Decimal
  hbs_percent_d10_hplc Decimal
  hbf_percent_d10_fcell_ratio Decimal
  hbf_percent_grady_fcell_ratio Decimal
  created_at DateTime [default: `now()`]
  updated_at DateTime [default: `now()`]
  omics_subjects omics_subjects [not null]

  indexes {
    (subject_id, sample_number) [unique]
  }

  Note: 'The underlying table does not contain a valid unique identifier and can therefore currently not be handled by Prisma Client.'
}

Table omics_subjects {
  subject_id String [pk]
  patient_mrn String [not null]
  project String [not null, default: 'OMI']
  created_at DateTime [default: `now()`]
  updated_at DateTime [default: `now()`]
  omics_results omics_results [not null]
  patients patients [not null]
  registrations subject_registration

  indexes {
    (patient_mrn, project) [unique]
  }
}

Table patients {
  patient_mrn String [pk]
  first_name String
  last_name String
  birth_date DateTime
  sex String
  race String
  ethnicity String
  created_at DateTime [default: `now()`]
  updated_at DateTime [default: `now()`]
  middle_name String
  labs Labs [not null]
  bone_marrow bone_marrow [not null]
  demographics demographics [not null]
  ip_admissions ip_admissions [not null]
  ip_medications ip_medications [not null]
  op_medications op_medications [not null]
  op_visits op_visits [not null]
  unified_visits unified_visits [not null]
  omics_subjects omics_subjects [not null]
  registrations subject_registration [not null]
}

Table subject_registration {
  id Int [pk, increment]
  subject_id String [unique, not null]
  registration_date DateTime [not null]
  consent_date DateTime [not null]
  corporate_id String
  patient_mrn String [not null]
  first_name String [not null]
  middle_name String
  last_name String [not null]
  date_of_birth DateTime [not null]
  created_at DateTime [default: `now()`]
  updated_at DateTime [default: `now()`]
  patient patients [not null]
  omics_subject omics_subjects [not null]
}

Table Labs {
  id Int [pk, increment]
  patient_mrn String [not null]
  pat_enc_csn_id String
  order_time DateTime
  proc_code String
  proc_name String
  component_id String
  lab_component_description String
  lab_result_value String
  result_time DateTime
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [default: `now()`, not null]
  patient patients [not null]
}

Table unified_visits {
  id String [pk]
  patient_mrn String [not null]
  visit_id String [unique, not null]
  visit_type String [not null]
  source_id String [not null]
  start_date DateTime [not null]
  end_date DateTime
  department String
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [default: `now()`, not null]
  icu_admission_yn String
  discharge_disposition String
  admit_dx_cd String
  admit_dx_description String
  final_dx_cd String
  final_dx_description String
  specific_visit_type String
  bp_systolic Int
  bp_diastolic Int
  weight_kg Decimal
  dx_codes String
  dx_names String
  heart_rate Int
  respiratory_rate Int
  temperature_f Decimal
  spo2 Int
  patient patients [not null]
}

Ref: bone_marrow.patient_mrn > patients.patient_mrn [delete: No Action]

Ref: demographics.patient_mrn > patients.patient_mrn [delete: No Action]

Ref: ip_admissions.patient_mrn > patients.patient_mrn [delete: No Action]

Ref: ip_medications.patient_mrn > patients.patient_mrn [delete: No Action]

Ref: op_medications.patient_mrn > patients.patient_mrn [delete: No Action]

Ref: op_visits.patient_mrn > patients.patient_mrn [delete: No Action]

Ref: omics_results.subject_id > omics_subjects.subject_id [delete: No Action]

Ref: omics_subjects.patient_mrn > patients.patient_mrn [delete: No Action]

Ref: subject_registration.patient_mrn > patients.patient_mrn [delete: No Action]

Ref: subject_registration.subject_id - omics_subjects.subject_id [delete: No Action]

Ref: Labs.patient_mrn > patients.patient_mrn

Ref: unified_visits.patient_mrn > patients.patient_mrn [delete: No Action]